--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-h5-audio-player": "^3.8.4",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sweetalert": "^2.1.2",
